<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="TestingFragment"
        android:orientation="horizontal"
        android:gravity="center">

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_description"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

    <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/testing"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_top"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_count"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_marginBottom="@dimen/margin_top"/>

    <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:text="@string/start_test"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
