<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="AboutFragment"
        tools:layout_editor_absoluteY="25dp"
        tools:layout_editor_absoluteX="0dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:id="@+id/textView3"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.5"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/imageView2"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_default="wrap"
            android:padding="15dp"
            android:text="@string/app_desc"
            android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.5"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/developer"
            android:id="@+id/textView5"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>
